--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "sanity": "^3.19.2",
+    "sharp": "^0.32.6",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.4"
   },
