--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "next-sanity": "^5.5.10",
     "next-share": "^0.27.0",
     "prettier": "^3.0.3",
@@ -25,7 +26,8 @@
     "sanity": "^3.19.2",
     "sharp": "^0.32.6",
     "styled-components": "^6.1.1",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.4",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
