--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "duroapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://durodolaabdulhad.com",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node server.ts"
   },
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
