--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://durodolaabdulhad.com",
   "scripts": {
-    "dev": "node server.ts",
+
+
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.ts"
+    "start": "next start"
   },
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
